src/app.css
* {
	margin: 0;
	padding: 0;
	font-display: swap;
	font-family: 'Open Sans';
}
html {
	box-sizing: border-box;
  }
  *, *:before, *:after {
	box-sizing: inherit;
  }

:root {
	--font: 'Open Sans', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
	font-family: var(--font);
	font-display: swap;
	color: var(--text, black);
	scrollbar-width: thin;
	scrollbar-color: var(--accent, hsl(37, 75%, 65%)) var(--background, hsl(120, 16%, 17%));

	--h1-size:  clamp(2rem,5vw,3rem);
	/* --h2-size: clamp(0.5rem,4vw,1rem); */
	--padding-normal: 1rem;
	--padding-double: calc(var(--padding-normal) * 2);
	--padding-two-and-a-half: calc(var(--padding-normal) * 2.5);
	--padding-half-normal: calc(var(--padding-normal) / 2);
	--font-mono: 'Fira Mono', monospace;

	/* Box-shadow */
	--box-shadow-x-offset: 0.25rem;
	--box-shadow-y-offset: calc(var(--box-shadow-x-offset) * 2);
	--box-shadow-blur-radius: var(--box-shadow-y-offset);
	--box-shadow-opacity: calc(40%);
	
	/* Z-indexes */
	--below: -1;
	--above: 1;
	--base: 0;
	--zFixed: calc(var(--above) + var(--base));
	--zSticky: calc(var(--above) + var(--base));
	--zModal: calc(var(--above) + var(--zFixed));

	/* Static Colors (won't change between light/dark mode)  */
	--pick6-selection: hsla(120, 20%, 25%, 0.8);
	--pick6-selection-value: 120, 20%, 25%;

	/* Toast variables */
		/* stylelint-disable custom-property-pattern */
		--toastContainerTop: 15%;
		--toastWidth: 100%;
		--toastContainerLeft: 2%;
		--toastContainerRight: 2%;
		/* stylelint-enable custom-property-pattern */
	
}

body {
	min-height: 100dvh;
	margin: 0;
}

p {
	line-height: 1.5;
	width: clamp(45ch, 50%, 75ch);
	max-width: 100%;
}

a {
	color: var(--accent-color, rgb(233 181 99));
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

h1 {
	font-size: var(--h1-size, 2.5rem);
	margin-bottom: 0 0 1em 0;
	text-align: center;
}

/* h2 {
	font-size: var(--h2-size, 1rem);
} */

/* Pre-formatted text that won't be changed by the browser styles */
pre {
	font-size: var(--pre-size, 16px);
	font-family: var(--font-mono);
	background-color: rgba(255 255 255 45%);
	border-radius: 3px;
	box-shadow: 2px 2px 6px rgba(255 255 255 25%);
	padding: var(--padding-half-normal)
	overflow-x: auto;
	color: var(--text-color);
}

input,
button {
	/* font-size: inherit; */
	font-family: inherit;
}

button:focus:not(:focus-visible) {
	outline: none;
}

